--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,8 +1,11 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: darken(#fff, 7%);
+$body-color: #624407;
+$nav-link-padding-y: 0.2rem;
+$nav-link-padding-x: 0.8rem;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+//$font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
@@ -17,3 +20,12 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+//$primary:        #0e1893;
+//$secondary:     $gray-600;
+//$success:       $green;
+//$info:          $cyan;
+//$warning:       $yellow;
+//$danger:        $red;
+//$light:         #e9ecef;
+//$dark:          $gray-800;
