--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,12 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+@import '~@fortawesome/fontawesome-free/css/all.min.css';
+
+@import 'header';
+@import 'body';
+@import 'footer';
